[project]
name = "RKRadial"
version = "0.1.0"
description = "Implements the Rydberg–Klein–Rees method and solves the radial Schrödinger equation."
readme = "README.md"
requires-python = ">=3.14.2"
dependencies = [
    "matplotlib>=3.10.8",
    "numpy>=2.4.1",
    "scienceplots>=2.2.0",
    "scipy>=1.17.0",
]

[tool.basedpyright]
typeCheckingMode = "basic"

[tool.ruff]
line-length = 100

[tool.ruff.lint]
extend-select = [
    "A",
    "ARG",
    "C4",
    "C90",
    "D",
    "E",
    "FIX",
    "I",
    "N",
    "NPY",
    "PL",
    "RET",
    "SIM",
    "TC",
    "UP",
    "W",
]

[tool.ruff.lint.pydocstyle]
convention = "google"
